--- a/about.html
+++ b/about.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
-
 <html lang="en">
   <head>
     <title>About - Landing Page</title>
     <meta property="og:title" content="About - Landing Page" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="utf-8" />
-    <meta property="twitter:card" content="summary_large_image" />
     <style data-tag="reset-style-sheet">
       html {  line-height: 1.15;}body {  margin: 0;}* {  box-sizing: border-box;  border-width: 0;  border-style: solid;}p,li,ul,pre,div,h1,h2,h3,h4,h5,h6 {  margin: 0;  padding: 0;}button,input,optgroup,select,textarea {  font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;}button,select {  text-transform: none;}button,[type="button"],[type="reset"],[type="submit"] {  -webkit-appearance: button;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {  border-style: none;  padding: 0;}button:-moz-focus,[type="button"]:-moz-focus,[type="reset"]:-moz-focus,[type="submit"]:-moz-focus {  outline: 1px dotted ButtonText;}a {  color: inherit;  text-decoration: inherit;}input {  padding: 2px 4px;}img {  display: block;}html { scroll-behavior: smooth  }
     </style>
@@ -31,12 +27,12 @@
     </style>
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
       data-tag="font"
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
       data-tag="font"
     />
     <style>
@@ -61,7 +57,7 @@
             <nav
               class="navigation-links3-nav navigation-links3-root-class-name17"
             >
-              <a href="home-page.html" class="navigation-links3-navlink">
+              <a href="index.html" class="navigation-links3-navlink">
                 <span>Home</span>
               </a>
               <a href="about.html" class="navigation-links3-navlink1">
@@ -101,7 +97,7 @@
               <nav
                 class="navigation-links3-nav navigation-links3-root-class-name18"
               >
-                <a href="home-page.html" class="navigation-links3-navlink">
+                <a href="index.html" class="navigation-links3-navlink">
                   <span>Home</span>
                 </a>
                 <a href="about.html" class="navigation-links3-navlink1">
@@ -145,13 +141,13 @@
                 <h1 class="about-text03">RICA MAE PERIO - CUETO</h1>
                 <div class="about-container04">
                   <span class="about-text04">
-                    It&apos;s my pleasure to introduce myself. I am Rica Mae P.
+                    It's my pleasure to introduce myself. I am Rica Mae P.
                     Cueto, born and raised in Batangas City. I am now a 20-year
                     old college student in Batangas State University -
-                    Alangilan. I was born on November 09, 2001. My father&apos;s
-                    name is Edgardo Cueto and my mother&apos;s name is Celestina
-                    Cueto. I have three brothers older than me; Ryan DJ, Rael
-                    and Romark. 
+                    Alangilan. I was born on November 09, 2001. My father's name
+                    is Edgardo Cueto and my mother's name is Celestina Cueto. I
+                    have three brothers older than me; Ryan DJ, Rael and
+                    Romark.&nbsp;
                   </span>
                 </div>
               </div>
@@ -170,11 +166,10 @@
                   <h1 class="about-text06">OREO</h1>
                   <div class="about-container08">
                     <span class="about-text07">
-                      Life wouldn&apos;t be so great without a pet. Let me
-                      introduce you my shih tzu, Oreo. He does not eat anything
-                      except chicken breast from Jollibee. Kidding aside, Oreo
-                      has been part of our family since April 2022. He loves to
-                      bark.
+                      Life wouldn't be so great without a pet. Let me introduce
+                      you my shih tzu, Oreo. He does not eat anything except
+                      chicken breast from Jollibee. Kidding aside, Oreo has been
+                      part of our family since April 2022. He loves to bark.
                     </span>
                   </div>
                 </div>
@@ -191,15 +186,15 @@
               <span class="about-text08">INTEREST</span>
               <h1 class="about-text09">VALORANT</h1>
               <span class="about-text10">
-                Valorant is an fps game that I never expected to play. Along
-                with the enjoyment and delight of playing, I get to meet
-                individuals with whom I never expected to have fun moments. Who
-                would have thought that an online game could bind us together
-                and make us cherish every time spent together? Sova is one of my
-                most played agent. Sova once said, &quot;If you&apos;re not a
-                good shot today, don&apos;t worry, there are other ways to be
-                useful.&quot; And by that, it marked and left a message that I
-                can certainly implement in real life.
+                Valorant is an fps game that I never expected to
+                play.&nbsp;Along with the enjoyment and delight of playing, I
+                get to meet individuals with whom I never expected to have fun
+                moments. Who would have thought that an online game could bind
+                us together and make us cherish every time spent together? Sova
+                is one of my most played agent. Sova once said, "If you're not a
+                good shot today, don't worry, there are other ways to be
+                useful." And by that, it marked and left a message that I can
+                certainly implement in real life.
               </span>
             </div>
           </div>
@@ -218,12 +213,11 @@
                 <div class="about-container12">
                   <span class="about-text13">
                     A friend is someone that you share close affection with. And
-                    that&apos;s how I met these three wonderful people. We built
-                    our friendship way back 2014. At first, our personalities
-                    contrasts each other, that&apos;s why I can&apos;t see any
-                    chance of us being friends. But, as the saying
-                    &quot;Opposite attracts.&quot;, our friendship can be the
-                    great representation of it. 
+                    that's how I met these three wonderful people. We built our
+                    friendship way back 2014. At first, our personalities
+                    contrasts each other, that's why I can't see any chance of
+                    us being friends. But, as the saying "Opposite attracts.",
+                    our friendship can be the great representation of it.&nbsp;
                   </span>
                 </div>
                 <span class="about-text14">
@@ -248,8 +242,8 @@
                     Vancouver, Canada formed by childhood friends Soliven and
                     Neeko. I first heard about them when a friend of mine played
                     a song by them, and that is how I became interested in their
-                    music. When I listen to any of their tracks, my mood
-                    instantly brightens. 
+                    music.&nbsp;When I listen to any of their tracks, my mood
+                    instantly brightens.&nbsp;
                   </span>
                 </div>
               </div>
@@ -268,7 +262,7 @@
                 <span class="about-text20">
                   Aside from playing Valorant, I also enjoy watching series from
                   Netflix. One of my favorite shows is Peaky Blinders. This show
-                  made my heart race and my eyes well up with tears. 
+                  made my heart race and my eyes well up with tears.&nbsp;
                 </span>
               </div>
             </div>
