--- a/more.html
+++ b/more.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
-
 <html lang="en">
   <head>
     <title>More - Landing Page</title>
     <meta property="og:title" content="More - Landing Page" />
-    <meta property="og:title" content="Photos - Landing Page" />
-    <meta property="og:title" content="About - Landing Page" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="utf-8" />
-    <meta property="twitter:card" content="summary_large_image" />
     <style data-tag="reset-style-sheet">
       html {  line-height: 1.15;}body {  margin: 0;}* {  box-sizing: border-box;  border-width: 0;  border-style: solid;}p,li,ul,pre,div,h1,h2,h3,h4,h5,h6 {  margin: 0;  padding: 0;}button,input,optgroup,select,textarea {  font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;}button,select {  text-transform: none;}button,[type="button"],[type="reset"],[type="submit"] {  -webkit-appearance: button;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {  border-style: none;  padding: 0;}button:-moz-focus,[type="button"]:-moz-focus,[type="reset"]:-moz-focus,[type="submit"]:-moz-focus {  outline: 1px dotted ButtonText;}a {  color: inherit;  text-decoration: inherit;}input {  padding: 2px 4px;}img {  display: block;}html { scroll-behavior: smooth  }
     </style>
@@ -33,12 +27,12 @@
     </style>
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
       data-tag="font"
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
       data-tag="font"
     />
     <style>
@@ -63,7 +57,7 @@
             <nav
               class="navigation-links8-nav navigation-links8-root-class-name17"
             >
-              <a href="home-page.html" class="navigation-links8-navlink">
+              <a href="index.html" class="navigation-links8-navlink">
                 <span>Home</span>
               </a>
             </nav>
@@ -94,7 +88,7 @@
               <nav
                 class="navigation-links8-nav navigation-links8-root-class-name18"
               >
-                <a href="home-page.html" class="navigation-links8-navlink">
+                <a href="index.html" class="navigation-links8-navlink">
                   <span>Home</span>
                 </a>
               </nav>
@@ -120,7 +114,7 @@
           <div class="more-container2">
             <h1 class="more-text">the views expressed</h1>
             <span class="more-text01">
-              Getting my friends&apos; point of view about me.
+              Getting my friends' point of view about me.
             </span>
             <div class="more-container3">
               <div class="more-testimonial-card">
